--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@react-navigation/native-stack": "^6.9.13",
     "react": "18.1.0",
     "react-native": "0.70.10",
-    "react-native-safe-area-context": "^4.7.1",
-    "react-native-screens": "^3.24.0"
+    "react-native-safe-area-context": "^4.7.2",
+    "react-native-screens": "^3.25.0",
+    "react-native-svg": "^13.13.0",
+    "styled-components": "^6.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
