--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@reduxjs/toolkit": "^1.9.5",
     "react": "18.1.0",
     "react-native": "0.70.10",
+    "react-native-flipper": "^0.212.0",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-svg": "^13.13.0",
+    "react-redux": "^8.1.2",
+    "redux": "^4.2.1",
+    "redux-flipper": "^2.0.2",
+    "redux-saga": "^1.2.3",
     "styled-components": "^6.0.8"
   },
   "devDependencies": {
