--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
@@ -22,6 +23,7 @@
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
     "redux-flipper": "^2.0.2",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.3",
     "styled-components": "^6.0.8"
   },
