--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-flipper": "^0.212.0",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^13.13.0",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
