--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
+    "date-fns": "^2.30.0",
     "react": "18.1.0",
     "react-native": "0.70.10",
     "react-native-flipper": "^0.212.0",
