--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/lodash": "^4.14.199",
     "date-fns": "^2.30.0",
+    "lodash": "^4.17.21",
     "react": "18.1.0",
     "react-native": "0.70.10",
     "react-native-flipper": "^0.212.0",
